# caption-generator

./: pyproject.toml
caption_generator/: core.py
